# generalized-modelling-framework

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
include/: gmf_util.h  linear_models.h  matrix.h  metrics.h
include/linear_model/: activations.h  linear_model.h  linear_model_ovr.h  loss_gradients.h  losses.h  regularization.h  regularization_gradient.h
include/neighbors/: distances.h  knn.h
src/: CMakeCache.txt  CMakeLists.txt  gmf.c  gmf_util.c  metrics.c  testing.c
src/examples/: linear_model_basic.c
src/linear_model/: activations.c  linear_model.c  linear_model_ovr.c  loss_gradients.c  losses.c  regularization.c  regularization_gradient.c
src/linear_model/examples/: least_squares.c  logistic_regression.c  multiclass_classification.c  regularization.c
src/linear_model/model_types/: linear_model_batch.c  linear_model_classic.c  linear_model_stochastic.c
src/neighbors/: distances.c  knn.c  knn_classic.c
src/neighbors/examples/: classic_knn.c
